--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <title>Hi! I'm Aaron Hutchins</title>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <p>This is a basic index.html file.</p>
+    <h1>Hi, I'm Aaron Hutchins. Here is where you see my work and give me a job</h1>
+    <p>You'll find my resume and portfolio here</p>
+
 </body>
+
+<nav>
+    <ul>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</nav>
+
+<a href="https://github.com/ahutchinscreative/github.io/blob/main/Portfolio_03-23.pdf">My Portfolio</a>
 </html>
